# PhysicsObjs

./: .gitignore  README.md  __init__.py  pyproject.toml
PhysicsObjs/: __init__.py
PhysicsObjs/PhysicsObjs_py/: PhysicsObjs.py  __init__.py
PhysicsObjs/c_objs/: PhysicsObjs.cat  __init__.py
PhysicsObjs/c_objs/c/: Dipole.h  Dipoles.c  Vector.h  simple_functions.h
PhysicsObjs/c_objs/python/: Dipole.py  Dipoles_cdll.py  Vector.py
tests/: __init__.py
