[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PhysicsObjs"
version = "0.1.0"
description = "A Python project named PhysicsObjs"
authors = [
  { name="josesalcedo410-hue", email="josesalcedo410@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = []

[project.urls]
Homepage = "https://github.com/josesalcedo410-hue/PhysicsObjs"
Issues = "https://github.com/josesalcedo410-hue/PhysicsObjs/issues"

[tool.setuptools.packages.find]
where = ["."]
